[project]
name = "revu-wrangler"
version = "0.1.0"
description = "Python SDK for the Bluebeam Cloud API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
